--- a/src/index.html
+++ b/src/index.html
@@ -27,27 +27,340 @@
 <body id="app" class="page">
   <main class="page__inner">
 
-    <div class="cover">
-      <div class="cover__text">
-        <div class="logo">
-          <img src="assets/logo.png" />
+    <nav class="menu">
+      <ul>
+        <li><a href="#product">Product</a></li>
+        <li><a href="#platform">RPM solution</a></li>
+        <li><a href="#platform">Wristband</a></li>
+        <li><a href="#app">Mobile App</a></li>
+        <li><a href="#dashboard">Platform</a></li>
+        <li><a href="#team">Team</a></li>
+      </ul>
+    </nav>
+
+    <section id="product" class="section section_cover">
+      <div class="section__content">
+        <img class="logo" src="assets/logo.png" />
+        <h1>Innovative remote health monitoring for the elderly</h1>
+        <div class="text text_24">
+          <p>User-friendly system for clinics and patients to constantly monitor vital signs and react in time, so older adultstruly live their lives to the full.</p>
         </div>
-        <h1>Get ahead. It's NotYet</h1>
-        <p>Innovative remote health monitoring for the elderly. The service is constantly monitoring vital signs and
-          promptly reports any deviations, so you can truly live your life to the full.</p>
-      </div>
-      <img class="cover__img" src="assets/phone.png" />
-      </div>
-      <div class="footer">
-        <div>
-          <span>Copyright © 2022–2023 NotYet<br><a href="documents/NotYet Terms of Use 06.04.2023.pdf">Terms of use</a>,
-            <a href="documents/NotYet Privacy Policy 05.15.23.pdf">Privacy policy</a></span>
-        </div>
-        <div>
-          <span>919 NorthMarket Street, Suite 950 in the City of Wilmington,<br>County of New Castle, Delaware, 19801,
-            USA<br><a href="mailto:info@notyet.tech">info@notyet.tech</a></span>
+        <div class="badges">
+          <span>Ailable for</span>
+          <div class="badges__store"></div>
         </div>
       </div>
+      <div class="section__cover">
+        <img src="assets/cover.png" />
+      </div>
+    </section>
+    
+    <section class="section section_promo">
+      <div class="section__content">
+        <h2>We help the elderly to say 'not yet' to CVD</h2>
+        <div class="text text_24">
+          <p>Cardiovascular disease remains the leading cause of death among the elderly. Although remedies have been available for a long time, treatment often starts too late due to an outdated approach.</p>
+          <p>Infrequent monitoring of vitals using awkward instruments, no regular feedback between one medical visit and the next and low adherence to therapy. Healthcare providers still face a shortage of physicians and a lack of data to predict patient deterioration. Even implementing remote patient monitoring has failed to solve the problem.</p>
+          <p>Let's turn this situation around.</p>
+        </div>
+      </div>
+      <div class="section__cover">
+        <img src="assets/cover-background.jpg" />
+      </div>
+    </section>
+
+    <section id="platform" class="section section_platform">
+      <div class="section__content">
+        <h2>Meet NotYet</h2>
+        <div class="text text_24">
+          <p>An innovative approach that combines modern technology and medical accuracy. NotYet provides essential support for doctors to respond rapidly when needed while letting the elderly take control of their health without disrupting their lifestyles. It takes healthcare and responsiveness to the next level.</p>
+        </div>
+      </div>
+      <div class="section__content_colomn">
+        <h3>NotYet is an <span class="hightlight">RPM solution for clinics</span> that consists of three key elements</h3>
+        <ul class="colomns colomns_3">
+          <li>
+            <img src="assets/band.png"/>
+            <h4>Wristband</h4>
+            <div class="text text_18">
+              <p>A wristband that continuously measures all the indicators needed to accurately interpret the patient's condition.</p>
+            </div>
+            <a href="#wristband" class="button">Read more</a>
+          </li>
+          <li>
+            <img src="assets/app.png"/>
+            <h4>Mobile app</h4>
+            <div class="text text_18">
+              <p>A mobile app with a simple interface and real-time feedback that sends the data to the cloud and then to the clinical platform.</p>
+            </div>
+            <a href="#app" class="button">Read more</a>
+          </li>
+          <li>
+            <img src="assets/platform.png"/>
+            <h4>Platform</h4>
+            <div class="text text_18">
+              <p>Digital dash-boards and statistics that allows the physician to thoroughly and simultaneously monitor large numbers of patients.</p>
+            </div>
+            <a href="#dashboard" class="button">Read more</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="wristband" class="section section_wristband">
+      <div class="section__content">
+        <h2>Wristband</h2>
+        <div class="text text_24">
+          <p>An elegant device for continuous multi-parameter monitoring. It provides complete data and doesn't interfere with active lifestyle.</p>
+        </div>
+      </div>
+      <div class="section__cover">
+        <img src="assets/band-back.png" />
+      </div>
+      <ul class="colomns colomns_3">
+        <li>
+          <ul class="icon-list">
+            <li>
+              <img src="assets/icon-blood-pressure.svg"/>
+              <span class="title">Blood Pressure (Auscultatory)</span>
+            </li>
+            <li>
+              <img src="assets/icon-heart-rate.svg"/>
+              <span class="title">Heart Rate</span>
+            </li>
+            <li>
+              <img src="assets/icon-heart-rate-var.svg"/>
+              <span class="title">Heart Rate Variability</span>
+            </li>
+            <li>
+              <img src="assets/icon-activities.svg"/>
+              <span class="title">Steps, Activity, Sleep and Fall Identification</span>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul class="icon-list">
+            <li>
+              <img src="assets/icon-blood-oxigen.svg"/>
+              <span class="title">Blood Oxygen</span>
+            </li>
+            <li>
+              <img src="assets/icon-temperature.svg"/>
+              <span class="title">Skin Temperature</span>
+            </li>
+            <li>
+              <img src="assets/icon-ecg.svg"/>
+              <span class="title">ECG (One lead)</span>
+            </li>
+          </ul>
+        </li>
+        <li>
+          <ul class="icon-list">
+            <li>
+              <img src="assets/icon-blood-pressure-2.svg"/>
+              <span class="title">Blood Pressure (Optical)</span>
+              <span class="subtitle">Planned for 2024</span>
+            </li>
+            <li>
+              <img src="assets/icon-raspiratory.svg"/>
+              <span class="title">Raspiratory Rate</span>
+              <span class="subtitle">Planned for 2024</span>
+            </li>
+            <li>
+              <img src="assets/icon-profile.svg"/>
+              <span class="title">Bioimpedance</span>
+              <span class="subtitle">Planned for 2024</span>
+            </li>
+          </ul>
+        </li>
+      </ul>
+      <div class="cards">
+        <ul class="cards__nav">
+          <li>
+            <a href="#">Range of measurements</a>
+          </li>
+          <li>
+            <a href="#">Highly accurate</a>
+          </li>
+          <li>
+            <a href="#">Real-time</a>
+          </li>
+        </ul>
+        <div class="cards__wrapper">
+          <ul class="cards__content">
+            <li class="card">
+              <div class="card__content">
+                <h4>Full range of measurements</h4>
+                <div class="text text_18">
+                  <p>NotYet monitors the most frequent health risks among the elderly by constantly measuring and correlating vital signs: heart rate, heart rate variability, blood pressure, ECG, skin temperature and blood oxygen. It also tracks activity, steps and sleep, and detects falls.</p>
+                </div>
+              </div>
+              <div class="card__cover">
+                <img src="assets/measurements.png" />
+              </div>
+            </li>
+            <li class="card">
+              <div class="card__content">
+                <h4>Highly accurate</h4>
+                <div class="text text_18">
+                  <p>All the sensors we use are highly precise, most notably the auscultatory method for measuring blood pressure, ensuring accuracy even in elderly people with problematic blood vessels.</p>
+                </div>
+              </div>
+              <div class="card__cover">
+                <img src="assets/highly-accurate.png" />
+              </div>
+            </li>
+            <li class="card card_real-time">
+              <div class="card__content">
+                <h4>Real-time, everywhere</h4>
+                <div class="text text_18">
+                  <p>Unlike the most commonly used medical measurement devices, NotYet tracks and transfers vitals to the platform in real-time. Elderly people can continue to travel, do sport and visit their loved ones while measurements are taken wherever they are and without disrupting their daily routine.</p>
+                </div>
+              </div>
+              <div class="card__cover">
+                <img src="assets/real-time.png" />
+              </div>
+            </li>
+          </ul>
+          <div class="cards__arrows">
+            <a class="arrow-btn arrow-btn_left" href="#"><</a>
+            <a class="arrow-btn arrow-btn_left" href="#">></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="app" class="section section_app">
+      <div class="section__content">
+        <h2>Mobile app</h2>
+        <div class="text text_24">
+          <p>The NotYet app sends data to the platform while giving seniors control over their health and engaging them in its management.</p>
+        </div>
+      </div>
+      <div class="section__cover">
+        <img src="assets/app-cover.png" />
+      </div>
+      <div class="cards">
+        <ul class="cards__nav">
+          <li>
+            <a href="#">Related interface</a>
+          </li>
+          <li>
+            <a href="#">Measurements and conditionse</a>
+          </li>
+          <li>
+            <a href="#">Communication language</a>
+          </li>
+        </ul>
+        <div class="cards__wrapper">
+          <ul class="cards__content">
+            <li class="card">
+              <div class="card__content">
+                <h4>Related interface</h4>
+                <div class="text text_18">
+                  <p>A simple, intuitive interface ensures usability even for people with impaired vision and fine motor skills. The app focuses on crucial components and clearly sets out the data, making the information easier to take in.</p>
+                </div>
+              </div>
+              <div class="card__cover">
+                <img src="assets/app-screen-1.png" />
+              </div>
+            </li>
+            <li class="card">
+              <div class="card__content">
+                <h4>Tracking measurements and conditions</h4>
+                <div class="text text_18">
+                  <p>The app gives real-time feedback and recommendations. It also includes a smart preventive SOS function which alerts caregivers and medical personnel when there's an emergency.</p>
+                </div>
+              </div>
+              <div class="card__cover">
+                <img src="assets/app-screen-2.png" />
+              </div>
+            </li>
+            <li class="card card_real-time">
+              <div class="card__content">
+                <h4>Precautions, reminders and gamification</h4>
+                <div class="text text_18">
+                  <p>A conversational dialogue mode is at the heart of our interaction design. It increases involvement and collects data for more accurate interpretation. NotYet helps keep track of prescriptions, medication taken and scheduling of measurements.</p>
+                </div>
+              </div>
+              <div class="card__cover">
+                <img src="assets/app-screen-3.png" />
+              </div>
+            </li>
+          </ul>
+          <div class="cards__arrows">
+            <a class="arrow-btn arrow-btn_left" href="#"><</a>
+            <a class="arrow-btn arrow-btn_left" href="#">></a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="dashboard" class="section section_dashboard">
+      <div class="section__content">
+        <h2>Platform</h2>
+        <div class="text text_24">
+          <p>A unified cloud platform eases clinic staff's workload and reacts by providing prompt alerts when needed.</p>
+        </div>
+      </div>
+      <div class="section__cover">
+        <img src="assets/dashboard.png" />
+        <span class="img-description">Patient dashboard</span>
+      </div>
+      <ul class="colomns colomns_3">
+        <li>
+          <h4>Patient categorization</h4>
+          <div class="text text_18">
+            <p>The smart patient prioritization system is based on an algorithm- and AI-based predictive risk model. Medical cardiology, neuroscience and gerontology experts were closely involved in developing NotYet and all its health insights are based on recommendations from leading associations (such as AHA, WHO, AACE and JNC).</p>
+          </div>
+        </li>
+        <li>
+          <h4>Individual reference profile</h4>
+          <div class="text text_18">
+            <p>Elderly people's normal vital signs can vary significantly, as they develop very specific conditions over time, due to individual differences, lifestyles, previous diseases and current medication. The platform takes into account over 30 factors and automatically calculates individual reference profiles for each user.</p>
+          </div>
+        </li>
+        <li>
+          <h4>Enriched data</h4>
+          <div class="text text_18">
+            <p>A large number of indicators and measurements create a fully comprehensive overview of the patient’s condition, including activity and sleep. This allows physicians to provide more accurate diagnoses, use predictive analytics and promptly adjust treatment whenever required.</p>
+          </div>
+        </li>
+      </ul>
+    </section>
+
+    <section class="section section_solution">
+      <div class="section__content">
+        <h2>Why NotYet is a better solution</h2>
+        <div class="text text_24">
+          <p>We are proud to have developed a solution that both patients and physicians want to use.</p>
+          <ul class="colomns colomns_2">
+            <li>
+              <img src="assets/patients.svg" />
+              <h4>Advantages for patients:</h4>
+              <ul class="list text text_18">
+                <li>NotYet focuses on the needs and characteristics of the elderly, considering both user experience and measurement methods.</li>
+                <li>NotYet gives real-time feedback and helps the elderly take control over their health.</li>
+                <li>NotYet provides a range of measurements while supporting elderly people’s lifestyles, replacing a large set of measuring devices that limit mobility and disrupt their daily routine.</li>
+              </ul>
+            </li>
+            <li>
+              <img src="assets/healscare.svg" />
+              <h4>Advantages for healthcare providers:</h4>
+              <ul class="list text text_18">
+                <li>NotYet increases medical staff use and involves physicians when needed.</li>
+                <li>NotYet facilitates a preventive response to health complications, thereby reducing hospitalization and other treatment costs.</li>
+                <li>NotYet increases patient satisfaction and engagement.</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="section section_team">
+
+    </section>
 
   </main>
 </body>
