--- a/src/index.html
+++ b/src/index.html
@@ -323,7 +323,7 @@
         <li>
           <h4>Enriched data</h4>
           <div class="text text_18">
-            <p>A large number of indicators and measurements create a fully comprehensive overview of the patient’s condition, including activity and sleep. This allows physicians to provide more accurate diagnoses, use predictive analytics and promptly adjust treatment whenever required.</p>
+            <p>A large number of indicators and measurements create a fully comprehensive overview of the patient's condition, including activity and sleep. This allows physicians to provide more accurate diagnoses, use predictive analytics and promptly adjust treatment whenever required.</p>
           </div>
         </li>
       </ul>
@@ -341,7 +341,7 @@
               <ul class="list text text_18">
                 <li>NotYet focuses on the needs and characteristics of the elderly, considering both user experience and measurement methods.</li>
                 <li>NotYet gives real-time feedback and helps the elderly take control over their health.</li>
-                <li>NotYet provides a range of measurements while supporting elderly people’s lifestyles, replacing a large set of measuring devices that limit mobility and disrupt their daily routine.</li>
+                <li>NotYet provides a range of measurements while supporting elderly people's lifestyles, replacing a large set of measuring devices that limit mobility and disrupt their daily routine.</li>
               </ul>
             </li>
             <li>
@@ -359,9 +359,75 @@
     </section>
 
     <section class="section section_team">
-
+      <div class="section__content">
+        <ul class="colomns colomns_2">
+          <li>
+            <h2>We <span class="love">love</span> what we do</h2>
+            <div class="text text_24">
+              <p>Our solution truly inspires us. We see a huge need for it, even among our friends and relatives. We want to provide them with tools that let them take control of their health, so they can confidently say 'Not yet!', which goes hand in hand with enabling them to live a full and enriching life. All of this has led to the founding of this startup.</p>
+            </div>
+          </li>
+          <li>
+            <div class="text text_18">
+              <img src="assets/pin.svg" />
+              <p>The NotYet company is registered in Delaware. We are currently developing the project with the founders' original investment and aim to attract more. We expect to launch our product on the US market in the near future.</p>
+            </div>
+          </li>
+        </ul>
+        <ul class="colomns colomns_2-flex">
+          <li>
+            <img src="assets/p-1.png" />
+            <h4>Lena Dobrokhotova</h4>
+            <span class="text text_24">Founder, CEO, Marketing and Product</span>
+            <div class="text text_18">
+              <p><span>Over 20</span> years of experience in marketing, business development, and product.</p>
+              <p>Former CMO of Yandex Core Services (Russia's largest IT ecosystem).</p>
+              <p>Former Head of Growth and Head of BU at CityMobil (Uber's Russian competitor).</p>
+              <p>MBA from London Metropolitan University.</p>
+            </div>
+          </li>
+          <li>
+            <img src="assets/p-2.png" />
+            <h4>Ramil Teregulov</h4>
+            <span class="text text_24">Co-founder, CTO (Hard & Software)</span>
+            <div class="text text_18">
+              <p><span>10 years</span> of experience in developing IoT solutions, wearable devices and medical equipment.</p>
+              <p>Co-founder of Mircod (mircod.com), a platform to automate the development of IoT devices and services.</p>
+            </div>
+          </li>
+          <li>
+            <img src="assets/p-3.png" />
+            <h4>Vladimir Zeldets</h4>
+            <span class="text text_24">Co-founder, Head of Medical Research</span>
+            <div class="text text_18">
+              <p>Senior Physician, Director of Quality Service, Emergency Department at Soroka University Medical Center, Israel.</p>
+              <p><span>Professor</span> at the Faculty of Health Sciences, Ben Gurion University of the Negev, Israel.</p>
+              <p>Member of the Israel Cardiology Society and Israeli Association of Emergency Medicine.</p>
+            </div>
+          </li>
+          <li>
+            <img src="assets/p-4.png" />
+            <h4>Polina Molodtsova</h4>
+            <span class="text text_24">Co-founder, Medical Research</span>
+            <div class="text text_18">
+              <p>Biotechnology, Moscow Institute of Physics and Technology.</p>
+              <p>Medical Science, First Moscow State Medical University.</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
-
+    <footer class="footer">
+      <div class="footer__terms">
+        Copyright © 2022–2023 NotYet<br>
+        <a href="documents/NotYet Terms of Use 06.04.2023.pdf">Terms of use</a>, 
+        <a href="documents/NotYet Privacy Policy 05.15.23.pdf">Privacy policy</a>
+      </div>
+      <div class="footer__contact">
+        400 ARROWOOD LN NEWARK DE 19702-8404 USA<br>
+        <a href="mailto:info@notyet.tech">info@notyet.tech</a>
+      </div>
+    </footer>
   </main>
 </body>
 
