--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
       <div class="section__cover">
         <img src="assets/band-back.png" />
       </div>
-      <ul class="columns columns_3">
+      <ul class="columns columns_3 text text_18 text_medium">
         <li>
           <ul class="icon-list">
             <li>
@@ -159,24 +159,30 @@
           <ul class="icon-list">
             <li>
               <img src="assets/icon-blood-pressure-2.svg"/>
-              <span class="title">Blood Pressure (Optical)</span>
-              <span class="subtitle">Planned for 2024</span>
+              <span>
+                <span class="title">Blood Pressure (Optical)</span>
+                <span class="subtitle">Planned for 2024</span>
+              </span>
             </li>
             <li>
               <img src="assets/icon-raspiratory.svg"/>
-              <span class="title">Raspiratory Rate</span>
-              <span class="subtitle">Planned for 2024</span>
+              <span>
+                <span class="title">Raspiratory Rate</span>
+                <span class="subtitle">Planned for 2024</span>
+              </span>
             </li>
             <li>
               <img src="assets/icon-profile.svg"/>
-              <span class="title">Bioimpedance</span>
-              <span class="subtitle">Planned for 2024</span>
+              <span>
+                <span class="title">Bioimpedance</span>
+                <span class="subtitle">Planned for 2024</span>
+              </span>
             </li>
           </ul>
         </li>
       </ul>
       <div class="cards">
-        <ul class="cards__nav">
+        <ul class="cards__nav text text_18">
           <li>
             <a href="#">Range of measurements</a>
           </li>
@@ -223,10 +229,7 @@
               </div>
             </li>
           </ul>
-          <div class="cards__arrows">
-            <a class="arrow-btn arrow-btn_left" href="#"><</a>
-            <a class="arrow-btn arrow-btn_left" href="#">></a>
-          </div>
+         
         </div>
       </div>
     </section>
@@ -242,7 +245,7 @@
         <img src="assets/app-cover.png" />
       </div>
       <div class="cards">
-        <ul class="cards__nav">
+        <ul class="cards__nav text text_18">
           <li>
             <a href="#">Related interface</a>
           </li>
@@ -277,7 +280,7 @@
                 <img src="assets/app-screen-2.png" />
               </div>
             </li>
-            <li class="card card_real-time">
+            <li class="card">
               <div class="card__content">
                 <h4>Precautions, reminders and gamification</h4>
                 <div class="text text_18">
@@ -289,10 +292,7 @@
               </div>
             </li>
           </ul>
-          <div class="cards__arrows">
-            <a class="arrow-btn arrow-btn_left" href="#"><</a>
-            <a class="arrow-btn arrow-btn_left" href="#">></a>
-          </div>
+         
         </div>
       </div>
     </section>
@@ -310,19 +310,19 @@
       </div>
       <ul class="columns columns_3">
         <li>
-          <h4>Patient categorization</h4>
+          <h4>Patient<br>categorization</h4>
           <div class="text text_18">
             <p>The smart patient prioritization system is based on an algorithm- and AI-based predictive risk model. Medical cardiology, neuroscience and gerontology experts were closely involved in developing NotYet and all its health insights are based on recommendations from leading associations (such as AHA, WHO, AACE and JNC).</p>
           </div>
         </li>
         <li>
-          <h4>Individual reference profile</h4>
+          <h4>Individual<br>reference profile</h4>
           <div class="text text_18">
             <p>Elderly people's normal vital signs can vary significantly, as they develop very specific conditions over time, due to individual differences, lifestyles, previous diseases and current medication. The platform takes into account over 30 factors and automatically calculates individual reference profiles for each user.</p>
           </div>
         </li>
         <li>
-          <h4>Enriched data</h4>
+          <h4>Enriched<br>data</h4>
           <div class="text text_18">
             <p>A large number of indicators and measurements create a fully comprehensive overview of the patient's condition, including activity and sleep. This allows physicians to provide more accurate diagnoses, use predictive analytics and promptly adjust treatment whenever required.</p>
           </div>
@@ -330,15 +330,16 @@
       </ul>
     </section>
 
-    <section class="section section_solution">
+    <section id="solution" class="section section_solution">
       <div class="section__content">
         <h2>Why NotYet is a better solution</h2>
         <div class="text text_24">
           <p>We are proud to have developed a solution that both patients and physicians want to use.</p>
+        </div>  
           <ul class="columns columns_2">
             <li>
               <img src="assets/patients.svg" />
-              <h4>Advantages for patients:</h4>
+              <h4>Advantages<br>for patients:</h4>
               <ul class="list text text_18">
                 <li>NotYet focuses on the needs and characteristics of the elderly, considering both user experience and measurement methods.</li>
                 <li>NotYet gives real-time feedback and helps the elderly take control over their health.</li>
@@ -347,7 +348,7 @@
             </li>
             <li>
               <img src="assets/healscare.svg" />
-              <h4>Advantages for healthcare providers:</h4>
+              <h4>Advantages<br>for healthcare providers:</h4>
               <ul class="list text text_18">
                 <li>NotYet increases medical staff use and involves physicians when needed.</li>
                 <li>NotYet facilitates a preventive response to health complications, thereby reducing hospitalization and other treatment costs.</li>
