--- a/src/index.html
+++ b/src/index.html
@@ -81,28 +81,28 @@
         <h3 class="h3_center">NotYet is an <span class="hightlight">RPM solution for clinics</span> that consists of three key elements</h3>
         <ul class="columns columns_3">
           <li>
-            <img src="assets/band.png" class="col-image"/>
+            <img src="assets/band.png" class="col-image anim-show"/>
             <h4>Wristband</h4>
             <div class="text text_18">
               <p>A wristband that continuously measures all the indicators needed to accurately interpret the patient's condition.</p>
             </div>
-            <a href="#wristband" class="button">Read more</a>
+            <a href="#wristband" class="button_blue">Read more</a>
           </li>
           <li>
-            <img src="assets/app.png" class="col-image" />
+            <img src="assets/app.png" class="col-image anim-show" />
             <h4>Mobile app</h4>
             <div class="text text_18">
               <p>A mobile app with a simple interface and real-time feedback that sends the data to the cloud and then to the clinical platform.</p>
             </div>
-            <a href="#app" class="button">Read more</a>
+            <a href="#app" class="button_blue">Read more</a>
           </li>
           <li>
-            <img src="assets/platform.png" class="col-image"/>
+            <img src="assets/platform.png" class="col-image anim-show"/>
             <h4>Platform</h4>
             <div class="text text_18">
               <p>Digital dash-boards and statistics that allows the physician to thoroughly and simultaneously monitor large numbers of patients.</p>
             </div>
-            <a href="#dashboard" class="button">Read more</a>
+            <a href="#dashboard" class="button_blue">Read more</a>
           </li>
         </ul>
       </div>
@@ -116,7 +116,7 @@
         </div>
       </div>
       <div class="section__cover">
-        <img src="assets/band-back.png" />
+        <img src="assets/band-back.png" class="anim-show" />
       </div>
       <ul class="columns columns_3 text text_18 text_medium">
         <li>
@@ -184,17 +184,17 @@
       <div class="cards">
         <ul class="cards__nav text text_18">
           <li>
-            <a href="#">Range of measurements</a>
+            <button class="button_clear button_focus" data-target="card_1">Range of measurements</button>
           </li>
           <li>
-            <a href="#">Highly accurate</a>
+            <button class="button_clear" data-target="card_2">Highly accurate</button>
           </li>
           <li>
-            <a href="#">Real-time</a>
+            <button class="button_clear" data-target="card_3">Real-time</button>
           </li>
         </ul>
         <div class="cards__wrapper">
-          <ul class="cards__content">
+          <ul class="cards__content cards__focus-card_1">
             <li class="card">
               <div class="card__content">
                 <h4>Full range of measurements</h4>
@@ -242,22 +242,22 @@
         </div>
       </div>
       <div class="section__cover">
-        <img src="assets/app-cover.png" />
+        <img src="assets/app-cover.png" class="anim-show" />
       </div>
       <div class="cards">
         <ul class="cards__nav text text_18">
           <li>
-            <a href="#">Related interface</a>
+            <button class="button_clear button_focus" data-target="card_1">Related interface</button>
           </li>
           <li>
-            <a href="#">Measurements and conditionse</a>
+            <button class="button_clear" data-target="card_2">Measurements and conditionse</button>
           </li>
           <li>
-            <a href="#">Communication language</a>
+            <button class="button_clear" data-target="card_3">Communication language</button>
           </li>
         </ul>
         <div class="cards__wrapper">
-          <ul class="cards__content">
+          <ul class="cards__content cards__focus-card_1">
             <li class="card">
               <div class="card__content">
                 <h4>Related interface</h4>
@@ -305,7 +305,7 @@
         </div>
       </div>
       <div class="section__cover">
-        <img src="assets/dashboard.png" />
+        <img src="assets/dashboard.png" class="anim-show" />
         <span class="img-description">Patient dashboard</span>
       </div>
       <ul class="columns columns_3">
@@ -371,7 +371,7 @@
           </li>
           <li>
             <div class="text text_18">
-              <img src="assets/pin.svg" />
+              <img src="assets/pin.svg" style="width: 34px; margin: 33px 34px 8px;" />
               <p>The NotYet company is registered in Delaware. We are currently developing the project with the founders' original investment and aim to attract more. We expect to launch our product on the US market in the near future.</p>
             </div>
           </li>
@@ -382,7 +382,7 @@
             <h4>Lena Dobrokhotova</h4>
             <span class="text text_24">Founder, CEO, Marketing and Product</span>
             <div class="text text_18">
-              <p><span>Over 20</span> years of experience in marketing, business development, and product.</p>
+              <p><span class="hightlight">Over 20</span> years of experience in marketing, business development, and product.</p>
               <p>Former CMO of Yandex Core Services (Russia's largest IT ecosystem).</p>
               <p>Former Head of Growth and Head of BU at CityMobil (Uber's Russian competitor).</p>
               <p>MBA from London Metropolitan University.</p>
@@ -393,7 +393,7 @@
             <h4>Ramil Teregulov</h4>
             <span class="text text_24">Co-founder, CTO (Hard & Software)</span>
             <div class="text text_18">
-              <p><span>10 years</span> of experience in developing IoT solutions, wearable devices and medical equipment.</p>
+              <p><span class="hightlight">10 years</span> of experience in developing IoT solutions, wearable devices and medical equipment.</p>
               <p>Co-founder of Mircod (mircod.com), a platform to automate the development of IoT devices and services.</p>
             </div>
           </li>
@@ -403,7 +403,7 @@
             <span class="text text_24">Co-founder, Head of Medical Research</span>
             <div class="text text_18">
               <p>Senior Physician, Director of Quality Service, Emergency Department at Soroka University Medical Center, Israel.</p>
-              <p><span>Professor</span> at the Faculty of Health Sciences, Ben Gurion University of the Negev, Israel.</p>
+              <p><span class="hightlight">Professor</span> at the Faculty of Health Sciences, Ben Gurion University of the Negev, Israel.</p>
               <p>Member of the Israel Cardiology Society and Israeli Association of Emergency Medicine.</p>
             </div>
           </li>
