--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
     <ul class="menu__wrapper text text_18">
       <li class="menu__item"><a href="#product">Product</a></li>
       <li class="menu__item"><a href="#platform">RPM solution</a></li>
-      <li class="menu__item"><a href="#platform">Wristband</a></li>
+      <li class="menu__item"><a href="#wristband">Wristband</a></li>
       <li class="menu__item"><a href="#mobile-app">Mobile App</a></li>
       <li class="menu__item"><a href="#dashboard">Platform</a></li>
       <li class="menu__item"><a href="#team">Team</a></li>
@@ -52,7 +52,8 @@
         </div>
       </div>
       <div class="section__cover">
-        <img src="assets/cover.png" />
+        <img class="cover_back" src="assets/cover_back.png" />
+        <img class="cover_front" src="assets/cover_front.png" />
       </div>
     </section>
     
@@ -89,7 +90,9 @@
             <a href="#wristband" class="button_blue">Read more</a>
           </li>
           <li>
+            <div class="app-logo">
             <img src="assets/app.png" class="col-image anim-show" />
+            </div>
             <h4>Mobile app</h4>
             <div class="text text_18">
               <p>A mobile app with a simple interface and real-time feedback that sends the data to the cloud and then to the clinical platform.</p>
@@ -266,7 +269,8 @@
                 </div>
               </div>
               <div class="card__cover">
-                <img src="assets/app-screen-1.png" />
+                <img class="lm" src="assets/app-screen-1.png" />
+                <img class="sm" src="assets/app-screen-sm-1.png" />
               </div>
             </li>
             <li class="card">
@@ -277,7 +281,8 @@
                 </div>
               </div>
               <div class="card__cover">
-                <img src="assets/app-screen-2.png" />
+                <img class="lm" src="assets/app-screen-2.png" />
+                <img class="sm" src="assets/app-screen-sm-2.png" />
               </div>
             </li>
             <li class="card">
@@ -288,7 +293,8 @@
                 </div>
               </div>
               <div class="card__cover">
-                <img src="assets/app-screen-3.png" />
+                <img class="lm" src="assets/app-screen-3.png" />
+                <img class="sm" src="assets/app-screen-sm-3.png" />
               </div>
             </li>
           </ul>
@@ -310,19 +316,19 @@
       </div>
       <ul class="columns columns_3">
         <li>
-          <h4>Patient<br>categorization</h4>
+          <h4>Patient <br>categorization</h4>
           <div class="text text_18">
             <p>The smart patient prioritization system is based on an algorithm- and AI-based predictive risk model. Medical cardiology, neuroscience and gerontology experts were closely involved in developing NotYet and all its health insights are based on recommendations from leading associations (such as AHA, WHO, AACE and JNC).</p>
           </div>
         </li>
         <li>
-          <h4>Individual<br>reference profile</h4>
+          <h4>Individual <br>reference profile</h4>
           <div class="text text_18">
             <p>Elderly people's normal vital signs can vary significantly, as they develop very specific conditions over time, due to individual differences, lifestyles, previous diseases and current medication. The platform takes into account over 30 factors and automatically calculates individual reference profiles for each user.</p>
           </div>
         </li>
         <li>
-          <h4>Enriched<br>data</h4>
+          <h4>Enriched <br>data</h4>
           <div class="text text_18">
             <p>A large number of indicators and measurements create a fully comprehensive overview of the patient's condition, including activity and sleep. This allows physicians to provide more accurate diagnoses, use predictive analytics and promptly adjust treatment whenever required.</p>
           </div>
@@ -339,7 +345,7 @@
           <ul class="columns columns_2">
             <li>
               <img src="assets/patients.svg" />
-              <h4>Advantages<br>for patients:</h4>
+              <h4>Advantages <br>for patients:</h4>
               <ul class="list text text_18">
                 <li>NotYet focuses on the needs and characteristics of the elderly, considering both user experience and measurement methods.</li>
                 <li>NotYet gives real-time feedback and helps the elderly take control over their health.</li>
@@ -348,7 +354,7 @@
             </li>
             <li>
               <img src="assets/healscare.svg" />
-              <h4>Advantages<br>for healthcare providers:</h4>
+              <h4>Advantages <br>for healthcare providers:</h4>
               <ul class="list text text_18">
                 <li>NotYet increases medical staff use and involves physicians when needed.</li>
                 <li>NotYet facilitates a preventive response to health complications, thereby reducing hospitalization and other treatment costs.</li>
