--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <title>NOTYET</title>
   <meta name="description"
-    content="Innovative remote health monitoring for the elderly. The service is constantly monitoring vital signs and promptly reports any deviations, so you can truly live your life to the full." />
+    content="Innovative remote health monitoring for the elderly. The service is constantly monitoring vital signs and promptly reports any deviations, so you can truly live your life to the full" />
   <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png" />
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png" />
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
@@ -21,10 +21,11 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:description"
-    content="Innovative remote health monitoring for the elderly. The service is constantly monitoring vital signs and promptly reports any deviations, so you can truly live your life to the full." />
+    content="Innovative remote health monitoring for the elderly. The service is constantly monitoring vital signs and promptly reports any deviations, so you can truly live your life to the full" />
 </head>
 
 <body id="app" class="page">
+  <a href="assets/test/" >test</a>
   <nav class="menu">
     <ul class="menu__wrapper text text_18">
       <li class="menu__item"><a href="#product">Product</a></li>
@@ -42,7 +43,7 @@
         <img class="logo" src="assets/logo.png" />
         <h1>Innovative remote health monitoring for the elderly</h1>
         <div class="text text_24">
-          <p>User-friendly system for clinics and patients to constantly monitor vital signs and react in time, so older adults truly live their lives to the full.</p>
+          <p>User-friendly system for clinics and patients to constantly monitor vital signs and react in time, so older adults truly live their lives to the full</p>
         </div>
         <div class="badges">
           <span class="text text_18">Available for</span>
