--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,6 @@
 </head>
 
 <body id="app" class="page">
-  <a href="assets/test/" >test</a>
   <nav class="menu">
     <ul class="menu__wrapper text text_18">
       <li class="menu__item"><a href="#product">Product</a></li>
@@ -433,7 +432,7 @@
         <a href="documents/privacy_policy">Privacy policy</a>
       </div>
       <div class="footer__contact">
-        400 ARROWOOD LN NEWARK DE 19702-8404 USA<br>
+        919 NorthMarket Street, Suite 950 in the City of Wilmington,<br>County of New Castle, Delaware, 19801, USA<br>
         <a href="mailto:info@notyet.tech">info@notyet.tech</a>
       </div>
     </footer>
